--- a/netflix-clone/package.json
+++ b/netflix-clone/package.json
@@ -2,7 +2,6 @@
   "name": "netflix-clone",
   "private": true,
   "version": "0.0.0",
-  
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,8 +15,10 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "axios": "^1.7.7",
+    "movie-trailer": "^3.2.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
